tempfile/derive_more/tests/compile_fail/display/shared_format_variant_spec.rs
#[derive(derive_more::Display)]
#[display("Stuff({_variant:?})")]
enum Foo {
    A,
}

fn main() {}
